# OpenGL-Space-Sim

./: CMakeLists.txt  Camera.cpp  Camera.h  GUI.cpp  GUI.h  LineTracers.cpp  LineTracers.h  Object.cpp  Object.h  README.md  Shader.cpp  Shader.h  fragmentLightSourceShader.glsl  fragmentShader.glsl  main.cpp  stb_image.cpp  vertexGUIShader.glsl  vertexLightSourceShader.glsl  vertexShader.glsl
GUIElements/: Button.cpp  Button.h  EnterValue.cpp  EnterValue.h  guiObject.cpp  guiObject.h
imgui/: imgui.cpp
textures/: R.jfif
